--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Responsive Layout</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-container">
+            <div class="header-left">Logo</div>
+            <div class="header-right">Nav</div>
+        </div>
+    </header>
+    <main>
+        <section class="first-section">
+            <div class="first-row">
+                <div class="first-card">first card</div>
+                <div class="second-card">second </div>
+            </div>
+            <div class="second-row">
+                <div class="third-card">Third card</div>
+                <div class="third-card">Third card</div>
+                <div class="third-card">Third card</div>
+            </div>  
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
