--- a/index.html
+++ b/index.html
@@ -4,27 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Responsive Layout</title>
 </head>
 <body>
+
+            <!-- HEADER -->
+
     <header>
         <div class="header-container">
-            <div class="header-left">Logo</div>
-            <div class="header-right">Nav</div>
+            <div class="header-left"><img src="./img/logo.png" alt="Logo"></div>
+            <div class="header-right">
+                <div class="nav-right">Planning</div>
+                <div class="nav-right">Testoimonials</div>
+                <div class="nav-right">Features</div>
+                <div class="nav-right">About Us</div>
+                <div><button>Get Started</button></div>
+            </div>
         </div>
     </header>
+
+            <!-- MAIN -->
+
     <main>
+
+            <!-- FIRST SECTION -->
+
         <section class="first-section">
             <div class="first-row">
-                <div class="first-card">first card</div>
-                <div class="second-card">second </div>
+                                        <!-- FIRST CARD -->
+                <div class="first-card">
+                    <div class="first-card-left">
+                        <h2>Get a demo application</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consequatur corporis iusto tenetur? A, ducimus dolores iusto nihil accusamus aliquam id assumenda dignissimos cum pariatur rerum, sint quos excepturi sequi!</p>
+                        <button><i class="fa-brands fa-apple"></i> Apple Store</button>
+                    </div>
+                    <div class="first-card-right"><img src="./img/phone.png" alt="Phone"></div>
+                </div>
+                                    <!-- SECOND CARD -->
+                <div class="second-card">
+                    <i class="fa-solid fa-file-code"></i>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quod, dolorem architecto aliquid ab harum, unde nisi facilis nesciunt quis porro. Architecto voluptates dolorum voluptate voluptatum cupiditate suscipit expedita minus!</p>
+                </div>
             </div>
             <div class="second-row">
-                <div class="third-card">Third card</div>
-                <div class="third-card">Third card</div>
-                <div class="third-card">Third card</div>
+                <div class="second-card">
+                    <i class="fa-solid fa-compass-drafting"></i>
+                    <h2>Web design</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae pariatur sit placeat! Placeat obcaecati quisquam minima minus quasi sunt? Rem animi, accusantium optio repellendus explicabo iure. Reiciendis culpa illum excepturi.</p>
+                </div>
+                <div class="second-card">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h2>Development</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, sunt impedit. Voluptate, maxime quae aut in possimus exercitationem, saepe, vel suscipit tenetur repellendus ducimus cumque. Eaque inventore minus cupiditate soluta?</p>
+                </div>
+                <div class="second-card">
+                    <i class="fa-solid fa-bullhorn"></i>
+                    <h2>Branding</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, possimus voluptas laudantium nulla corporis temporibus voluptatem quisquam ad deserunt cum amet facilis aperiam vel similique culpa deleniti corrupti illo mollitia!</p>
+                </div>
             </div>  
         </section>
+
+                        <!-- SECONDA SECTION -->
+
+        <section class="second-section">
+            <div class="second-container">
+                <div class="left-col">
+                    <img src="./img/planning1.png" alt="planning-1">
+                    <h2>Strategic planning</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint vero iste repellat temporibus recusandae ratione fugit doloribus, dignissimos laudantium placeat eum corporis molestiae adipisci? Veritatis beatae molestiae sint officiis natus?</p>
+                </div>
+                <div class="right-col">
+                    <img src="./img/planning2.png" alt="Planning-2">
+                    <h2>App Development</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aliquid autem sit non animi error id velit vero iusto? Assumenda nostrum dolores sed perspiciatis! Nemo illo minus ducimus nisi doloremque!</p>
+                    <div class="cerchio-viola">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer></footer>
 </body>
