--- a/index.html
+++ b/index.html
@@ -87,6 +87,43 @@
             </div>
         </section>
 
+                        <!-- TERZA SECTION -->
+
+        <section class="third-section">
+            <P>TESTIMONIALS</P>
+            <h2>We are committed expert partners</h2>
+            <p>We place huge value on strong relationships and have seen the beneft they bring to our business. Customer feedback is vital in helping us to get it right.</p>
+            <div class="container-testimonials-row">
+                <div class="testimonials-row">
+                    <div class="testimonials-left">
+                        <img src="./img/testimonial1.jpg" alt="Testimonial1">
+                    </div>
+                    <div class="testimonials-right">
+                        <p> <i class="fa-solid fa-quote-left"></i> Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin. <i class="fa-solid fa-quote-right"></i></p>
+                        <p>NAT REYNOLDS</p>
+                    </div>
+                </div>
+                <div class="container-testimonials-row">
+                    <div class="testimonials-row">
+                        <div class="testimonials-left">
+                            <img src="./img/testimonial2.jpg" alt="Testimonial2">
+                        </div>
+                        <div class="testimonials-right">
+                            <p> <i class="fa-solid fa-quote-left"></i> Pharetra vel turpis nunc eget lorem. Quisque id diam vel quam elementum pulvinar etiam. Urna porttitor rhoncus dolor purus non enim praesent elementum. <i class="fa-solid fa-quote-right"></i></p>
+                            <p>CELIA ALMEDA</p>
+                        </div>
+                    </div>
+                    <div class="container-testimonials-row">
+                        <div class="testimonials-row">
+                            <div class="testimonials-left">
+                                <img src="./img/testimonial3.jpg" alt="Testimonial3">
+                            </div>
+                            <div class="testimonials-right">
+                                <p> <i class="fa-solid fa-quote-left"></i> Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin. Nibh nisl condimentum id venenatis a condimentum. <i class="fa-solid fa-quote-right"></i></p>
+                                <p>BOB ROBERTS</p>
+                            </div>
+                        </div>
+        </section>
     </main>
     <footer></footer>
 </body>
