--- a/index.html
+++ b/index.html
@@ -124,6 +124,50 @@
                             </div>
                         </div>
         </section>
+
+                        <!-- QUARTA SECTION -->
+        
+        <section class="section-benefit">
+            <h2>Benefits of working with us</h2>
+            <div class="container-benefit">
+                <div class="benefit-card">
+                    <h2>01</h2>
+                    <h3>High quality</h3>
+                    <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                    <button>more</button>
+                </div>
+                <div class="benefit-card">
+                    <h2>02</h2>
+                    <h3>Creative Team</h3>
+                    <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                    <button>more</button>
+                </div>
+                <div class="benefit-card">
+                    <h2>03</h2>
+                    <h3>Amazing Results</h3>
+                    <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                    <button>more</button>
+                </div>
+                <div class="benefit-card">
+                    <h2>04</h2>
+                    <h3>Best Pricing</h3>
+                    <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                    <button>more</button>
+                </div>
+                <div class="benefit-card">
+                    <h2>05</h2>
+                    <h3>Innovations</h3>
+                    <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                    <button>more</button>
+                </div>
+                <div class="benefit-card">
+                    <h2>06</h2>
+                    <h3>24/7 Support</h3>
+                    <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                    <button>more</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
