--- a/index.html
+++ b/index.html
@@ -168,6 +168,35 @@
                 </div>
             </div>
         </section>
+
+                <!-- QUINTA SECTION -->
+
+        <section class="section-about">
+            <div class="about-left">
+                <h2>About Us</h2>
+                <p>Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Nèque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.</p>
+                <p>Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. The text box. Click again or double click to start editing the text.</p>
+            </div>
+            <div class="about-right">
+                <img src="./img/about.jpg" alt="about"> 
+                <i class="absolute-quote"></i>
+                <p>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</p>
+                <button><i class="fa-brands fa-linkedin"></i> Find me on linkedin</button>
+            </div>
+        </section>
+
+                <!-- SESTA SECTION  -->
+
+        <section class="section-free">
+            <div class="container-free">
+                <p>GET STARTED</p>
+                <h2>Simple, Trasparent Pricing</h2>
+                <h2>It's Free!</h2>
+                <p>We're still in beta and we will be for awhile. As we add more functionality. We'll look into other plans with more controls.</p>
+                <button>Get Started</button>
+                <p>Copyright 2021 Boolean • Classe XX • <a href="#">Privacy Policy</a></p>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
