--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, optio ullam, provident officiis porro at facere, possimus commodi odit consectetur voluptate inventore atque ex repellat pariatur corrupti nesciunt ipsa fuga!</p>
+            <p><a href="#">Lorem ipsum</a> scelerisque mauris pellentesque <a href="#">Boolean careers</a></p>
+        </div>
+    </footer>
 </body>
 </html>
